--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,33 @@
+@font-face {
+  font-family: 'Pretendard';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+.App{
+  width: 500px;
+  margin: 0 auto;
+  font-family: 'Pretendard';
+}
+
+
+
+
 .black-nav{
   display: flex;
   background-color: #000;
   width: 100%;
-  color: #ffc83d;
+  color: #fff;
   padding-left: 20px;
 }
+
 
 div{
   box-sizing: border-box;
 }
 
 .list{
+
   padding-left: 20px;
   text-align: left;
   border-bottom: 1px solid #000;
@@ -19,6 +36,7 @@ div{
 .list span{
   cursor: pointer;
 }
+
 
 .modal{
   margin-top: 20px;
