--- a/src/App.css
+++ b/src/App.css
@@ -4,43 +4,153 @@
   font-weight: 400;
   font-style: normal;
 }
+
+body{
+  margin: 0 auto;
+
+
+}
 .App{
+  position: relative;
   width: 500px;
+  height: 800px;
   margin: 0 auto;
   font-family: 'Pretendard';
+  border: #d60f3c;
+  background-image: url(/public/back.png);
+}
+
+.App >h4{
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
 }
 
 
+.inner{
+  width: 76%;
+  height: 410px;
+  overflow: auto;
+  margin: 0 auto;
+}
+
+.inner::-webkit-scrollbar {
+  width: 7px;
+}
+
+.inner::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+
+.inner::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  background-color: #60c4c1;
+  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+}
 
 
-.black-nav{
-  display: flex;
-  background-color: #000;
-  width: 100%;
-  color: #fff;
+.drag{
+  -ms-user-select: none; 
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.input{
+  position: fixed;
+  left: calc(50% - 150px);
+  bottom: 38%;
+}
+.input input{
+  border: 0;
+  outline: none;
+  height: 40px;
+  width: 300px;
+  /* border: solid 1px #e4e4e4; */
+  border: solid 1px #60c4c1;
+  box-sizing: border-box;
+  border-radius: 50px;
   padding-left: 20px;
 }
 
-
-div{
-  box-sizing: border-box;
+.input button{
+  position: absolute;
+  right: 0;
+  background-color: #60c4c1;
+  height: 40px;
+  border: 0;
+  outline: none;
+  width: 80px;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 50px;
+  box-shadow: inset 2px 2px 2px 0px rgba(255,255,255,.5),
+  inset -7px -7px 10px 0px rgba(0,0,0,.1), 7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  text-shadow:  2px 2px 3px rgba(255,255,255,.5),
+            -4px -4px 6px rgba(116, 125, 136, .2);
+  outline: none;
 }
+
+.input button:hover{
+  background-color: #89d8d3;
+}
+
 
 .list{
-
-  padding-left: 20px;
+  width: 75%;
+  margin: 0 auto;
+  padding: 10px;
   text-align: left;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #60c4c1;
+}
+
+.list:last-child{
+  border: 0;
 }
 
 .list span{
   cursor: pointer;
 }
 
+.flex{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex button{
+  width: 50px;
+  height: 30px;
+  border: 0;
+  outline: none;
+  background-color: #60c4c1;
+  border-radius: 50px;
+  color: #fff;
+}
+
+.bg{
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  width: 100vw;
+  height: 100vh;
+}
 
 .modal{
-  margin-top: 20px;
-  padding: 20px;
-  background-color: #fff;
+  width: 200px;
+  position: absolute;
+  padding: 10px 10px 33px;
+  background-color: #60c4c1;
   text-align: left;
+  top: calc(50% - 150px);
+  left: calc(50% - 100px);
+}
+
+.modal p{
+  margin: 0;
+  cursor: pointer;
 }
